--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "embla-carousel-react": "^8.0.0-rc11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.4",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-simply-carousel": "^9.0.4",
@@ -52,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-hash-link": "^2.4.6",
     "file-loader": "^6.2.0"
   }
 }
